@@ -3,6 +3,7 @@
         * Version 1.2.0 released
         =========================
 
+        Skip zero livetime observations in stacked cubes for CTA (#1920)
         Correct handling of time references in GGti::extend() method (#1922)
         Check that MC energy is comprised in validity range for CTA 3D background template (#1918)
         Add GModelTemporalPhaseCurve class (#1916)
